add custom css for home icon

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
 
 /* map_css */
 .bi-exclamation-triangle-fill :hover {
-    fill: #7703e3;
+    fill: #6115a9;
 }
 .bi-house-door-fill{
     fill: #0c6635;
