--- a/styles/logged_in.css
+++ b/styles/logged_in.css
@@ -1,8 +1,54 @@
 #logged_in {
-    background-color: lightblue;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 40px;
+    height: 40px;
+    background-color: darkgreen;
+    font-size: x-large;
+    padding-left: 8px;
+    padding-top: 1px;
+    font-weight: bold;
+    color: rgb(211, 242, 203);
+    display: inline-block;
+}
+
+#navbar,
+#footer {
+    background-color: #34a853;
+    border-bottom: 2px white;
+    height: 68px;
+}
+
+#footer {
+    position: fixed;
+    justify-content: center;
+
+}
+
+
+#logo {
     z-index: -1;
-    text-decoration: none;
+    height: 50px;
+}
+
+#add_report, #locate_me, #locate_home, #set_home {
+    width: 75px;
+    height: 50px;
+    justify-content: center;
+    line-height: 18px;
+    background-color: darkgreen;
+    color: rgb(211, 242, 203);
+    border-color: darkgreen;
+}
+
+#locate_me {
+            left: 10px;
+}
+
+#add_report {
+    right: 10px;
+}
+
+#search_bar {
+    border: 8px solid darkgreen;
+    border-radius: 2px;
+    background-color: #34a853;
 }
